fix: issue with positioning student link on mobile

--- a/src/index/index.module.css
+++ b/src/index/index.module.css
@@ -8,7 +8,7 @@
 }
 @media (max-width: 500px) {
   .bergen {
-    margin: 13rem 0 10rem;
+    margin: 0rem 0 10rem;
   }
 }
 
